--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
 
         .container {
@@ -29,12 +30,17 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
+            opacity: 0;
+            transform: translateY(-50px);
+            animation: fadeIn 0.8s forwards;
         }
 
         h1 {
             color: #333;
             font-size: 24px;
             margin-bottom: 20px;
+            opacity: 0;
+            animation: fadeIn 0.8s 0.2s forwards;
         }
 
         input[type="text"] {
@@ -46,6 +52,8 @@
             font-size: 16px;
             outline: none;
             transition: border 0.3s;
+            opacity: 0;
+            animation: fadeIn 0.8s 0.4s forwards;
         }
 
         input[type="text"]:focus {
@@ -61,6 +69,8 @@
             cursor: pointer;
             font-size: 16px;
             transition: background 0.3s;
+            opacity: 0;
+            animation: fadeIn 0.8s 0.6s forwards;
         }
 
         button:hover {
@@ -71,6 +81,20 @@
             font-size: 18px;
             margin-top: 15px;
             font-weight: bold;
+            opacity: 0;
+            animation: fadeIn 0.8s 0.8s forwards;
+        }
+
+ 
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .valid {
@@ -91,14 +115,13 @@
     </div>
 
     <script>
-        // Event -> Enter
         document.getElementById("emailInput").addEventListener("keypress", function(event) {
             if (event.key === "Enter") {
                 checkEmail();
             }
         });
 
-        // Kiểm tra dạng mail
+      
         function checkEmail() {
             const email = document.getElementById("emailInput").value;
             const resultElement = document.getElementById("result");
@@ -112,7 +135,7 @@
             }
         }
 
-        // Xác thực dạng mail
+
         function isValidEmail(email) {
             const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             const allowedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "icloud.com"];
